# Finley

./: .gitignore  LICENSE  PROJECT_NARRATIVE.md  README.md  pyproject.toml
artifacts/: bon_adaptation.json  bon_adaptation_epoch_diagnostics.json  bon_hard_residuals.json  bon_nonlinear_loso.json  bon_xgboost_loso.json  con_adaptation.json  cor_adaptation.json
artifacts/adaptation_subset/: dud_adaptation.csv  dud_adaptation.json  dud_session_profiles.csv  dud_session_profiles.json  dud_session_profiles_tracks.csv  fiv_adaptation.csv  fiv_adaptation.json  fra_adaptation.csv  (+9 more)
configs/: hc6.local.example.json  hc6.local.json
data/: filelist.txt
results/: adaptation_summary.csv  benchmark_summary.csv
scripts/: build_inventory.py  build_model_table.py  diagnose_adaptation_epoch_residuals.py  export_session_tables.py  generate_portfolio_figures.py  inspect_hard_session_residuals.py  inspect_hard_session_residuals_nonlinear.py  inspect_hard_sessions.py  inspect_mat.py  load_session.py  profile_model_table.py  run_session_adaptation_experiment.py  run_target_clipping_experiment.py  show_session_track_rows.py  summarize_all_animal_benchmarks.py  summarize_session.py  train_baseline.py  train_run_cell_baseline.py  train_run_cell_nonlinear.py  train_run_cell_sklearn_gbdt.py  train_run_cell_xgboost.py
tests/: test_adaptation.py  test_clipping.py  test_hard_session_diagnostics.py  test_hc6_inventory.py  test_residual_summaries.py  test_run_cell_baseline.py  test_run_cell_nonlinear.py  test_session_paths.py  test_session_profiles.py  test_session_summary_helpers.py
(+50 files in other folders)
