[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finley"
version = "0.1.0"
description = "Initial ML project scaffold for working with CRCNS HC-6 data on Eureka HPC."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
