[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finley"
version = "0.1.0"
description = "Cross-session neural firing-rate modeling workflow for CRCNS HC-6 data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]
bench = [
  "scikit-learn>=1.4",
  "xgboost>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
